src/sass/modules/_iconav.scss
nav#iconav {
    position: absolute;
    left: 0;
    // mobile
    padding: 0;
    bottom: 0;
    height: 3rem;
    width: 100vw;

    @include breakpoint(md) {
        padding: 0.15rem;
        top: 0;
        bottom: auto;
        width: 3rem;
        height: 6rem;
    }

    border: none;
    z-index: 10;
}

nav#iconav ul {
    padding: 0;
    margin: 0;
    display: flex;
    //mobile
    flex-flow: row nowrap;
    justify-content: space-around;

    @include breakpoint(md) {
        flex-flow: column nowrap;
        justify-content: stretch;
        width: 3rem;
    }

    list-style-type: none;
    background: #f3f3f3;
    /*
  > li {
    background: rgba(0, 0, 0, 0.75);
  }

  > li:first-child {
    border-top-left-radius: 1.5rem;
    border-top-right-radius: 1.5rem;
  }

  > li:last-child {
    border-bottom-left-radius: 1.5rem;
    border-bottom-right-radius: 1.5rem;
  }
  > li:first-child,
  > li:last-child {
    overflow: hidden;
  }
  */
}

nav#iconav a {
    display: block;
    padding: 0.5rem;
    width: 2rem;
    height: 2rem;
    line-height: 1rem;
    text-align: center;
    text-decoration: none;

    svg {
        width: 1.5rem;
        height: 1.5rem;
        fill: rgb(0, 0, 0);
        pointer-events: none;
    }
}
/*
nav#iconav a[title]:hover:after {
    content: attr(title);
    position: absolute;
    padding: 0.5rem;
    left: 100%;
    background: rgba(0, 0, 0, 0.75);
    color: rgba(255, 255, 255, 0.75);
}
*/

